# space-filling

./: .gitignore  Cargo.toml  readme.md
doc/: GPU.md
doc/video/: .gitignore  README.md  build_assets.py  fields.py  manim.cfg  pyproject.toml  render_all.py  scene.py  scene01_intro.py  scene02_sdf.py  scene03_bitmap.py  scene04_quadtree.py  scene05_algebra.py  scene06_optimizer.py  scene07_million.py  scene08_mandelbrot.py  scene09_limitations.py  scene10_outro.py  script.md  theme.py  thumbnail.py  video.py
doc/video/render/: Cargo.toml
doc/video2/: .gitignore  Cargo.toml  volumetric.blend
doc/video2/src/: 08_embedded_3d.rs  08_embedded_3d_vdb.py  embedded_3d_vdb.py
doc/video2/src/format/: mod.rs  obj.rs  vol.rs
examples/: embedded.rs  fractal_distribution.rs  image_dataset.rs  polymorphic.rs  random_distribution.rs
examples/adf/: custom_primitive.rs
examples/argmax2d/: 01_fractal_distribution.rs  03_embedded.rs  05_image_dataset.rs
examples/gd_adf/: 02_random_distribution.rs  04_polymorphic.rs  06_custom_primitive.rs  07_baked_sdf.rs  08_volumetric_3d.py  08_volumetric_3d.rs
src/: argmax2d.rs  drawing.rs  error.rs  geometry.rs  lib.rs  main.rs  quadtree.rs  sdf.rs  tests.rs  util.rs
src/drawing/: impl_draw_rgbaimage.rs  mod.rs  tests.rs
src/geometry/: mod.rs  shapes.rs
src/legacy/: drawing.rs  examples.rs  geometry.rs  mod.rs  tests.rs
src/legacy/argmax/: mod.rs
src/legacy/gpu/kernel/: main.cl
src/lib/: argmax.rs  argmax2d.rs  drawing.rs  error.rs  geometry.rs  lib.rs  quadtree.rs  sdf.rs
src/lib/argmax/: convolution_vector.rs
src/lib/gpu/: mod.rs
src/lib/gpu/kernel/: main.cl
src/lib/legacy/: examples.rs  quadtree.rs
src/lib/legacy/gpu/: mod.rs
src/quadtree/: sdf.rs
src/solver/: adf.rs  argmax2d.rs  gradient_ascent.rs  gradient_descent.rs  line_search.rs  mod.rs  quadtree.rs  z_order_storage.rs
src/solver/adf/: mod.rs  quadtree.rs  tests.rs
src/solver/argmax2d/: mod.rs  z_order_storage.rs
src/solver/gradient_descent/: impl_gradientdescent_adf.rs  impl_gradientdescent_fn.rs  impl_gradientdescent_vec_fn.rs  impl_gradientdescent_zorderstorage.rs  mod.rs  tests.rs
