[package]
name = "space-filling"
version = "0.3.1"
description = "Generalized 2D space filling"
readme = "readme.md"
authors = ["Frederica Bernkastel <bernkastel.frederica@protonmail.com>"]
repository = "https://github.com/FredericaBernkastel/space-filling"
documentation = "https://docs.rs/space-filling/"
categories = ["science"]
keywords = ["generative-art"]
license = "GPL-3.0"
edition = "2021"
exclude = ["LICENCE", "doc/*", "src/legacy/*"]

[lib]
name = "space_filling"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
image = { version = "0.24", default_features = false, features = ["png", "jpeg"], optional = true }
rand = { version = "0.8", default-features = false, optional = true }
rand_pcg = { version = "0.3", optional = true }
rayon = "1.5"
euclid = "0.22"
num-traits = "0.2"
itertools = "0.10"

[dev-dependencies]
regex = "1.4"
open = "1.4"
walkdir = "2.3"
lexical-sort = "0.3"
humansize = "1.1"
num-complex = "0.4"

[features]
default = []
drawing = ["image", "rand", "rand_pcg"]

[profile.release]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc"]

[[example]]
name = "fractal_distribution"
required-features = ["drawing"]

[[example]]
name = "random_distribution"
required-features = ["drawing"]

[[example]]
name = "embedded"
required-features = ["drawing"]

[[example]]
name = "polymorphic"
required-features = ["drawing"]

[[example]]
name = "image_dataset"
required-features = ["drawing"]

[[example]]
name = "custom_primitive"
required-features = ["drawing"]
path = "examples/adf/custom_primitive.rs"
