[package]
name = "space-filling"
version = "0.5.0"
description = "Generalized 2D space filling"
readme = "readme.md"
authors = ["Frederica Bernkastel <bernkastel.frederica@protonmail.com>"]
repository = "https://github.com/FredericaBernkastel/space-filling"
documentation = "https://docs.rs/space-filling/"
categories = ["science"]
keywords = ["generative-art"]
license = "GPL-3.0"
edition = "2021"
exclude = ["LICENCE", "doc/*", "src/legacy/*"]

[lib]
name = "space_filling"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }
rand = { version = "0.10", default-features = false }
rand_pcg = { version = "0.10" }
rayon = "1.12"
nalgebra = "0.35"
num-traits = "0.2"
itertools = "0.15"
humansize = "1.1"

[dev-dependencies]
regex = "1.4"
open = "5.3.6"
walkdir = "2.3"
lexical-sort = "0.3"
num-complex = "0.4"

[features]
default = []
drawing = ["image"]

[profile.release]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "01_fractal_distribution"
required-features = ["drawing"]
path = "examples/argmax2d/01_fractal_distribution.rs"

[[example]]
name = "02_random_distribution"
required-features = ["drawing"]
path = "examples/gd_adf/02_random_distribution.rs"

[[example]]
name = "03_embedded"
required-features = ["drawing"]
path = "examples/argmax2d/03_embedded.rs"

[[example]]
name = "04_polymorphic"
required-features = ["drawing"]
path = "examples/gd_adf/04_polymorphic.rs"

[[example]]
name = "05_image_dataset"
required-features = ["drawing"]
path = "examples/argmax2d/05_image_dataset.rs"

[[example]]
name = "06_custom_primitive"
required-features = ["drawing"]
path = "examples/gd_adf/06_custom_primitive.rs"

[[example]]
name = "07_baked_sdf"
required-features = ["drawing"]
path = "examples/gd_adf/07_baked_sdf.rs"

[[example]]
name = "08_volumetric_3d"
path = "examples/gd_adf/08_volumetric_3d.rs"
